[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/DangerZone.gd" type="Script" id=1]
[ext_resource path="res://imgs/red.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 511.256, 119.461 )

[node name="DangerZone" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Area2D" type="Area2D" parent="." index="0"]

position = Vector2( 513.616, -62.878 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="Sprite" type="Sprite" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.243098 )
position = Vector2( 512.551, -58.4088 )
scale = Vector2( 257.275, 60.4207 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 12.0
margin_right = 189.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Blocks in danger"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


